[package]
name = "mpconn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
socket2 = { version = "0.4.4", features = ["all"]}
libc = "0.2.116"
tokio-tun = "0.3.16"
futures = "0.3.19"
bytes = "1"
clap = { version = "3.2.22", features = ["derive"] }
bincode = "1.3.3"
pcap = { git = "https://github.com/drblah/pcap", branch = "async_wrappable" }
lz4_flex = { version = "0.9.3" }
simplelog = "0.12.0"
log = "0.4.17"