[package]
name = "mpconn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
socket2 = { version = "0.4.4", features = ["all"] }
libc = "0.2.116"
tokio-tun = "0.7.0"
futures = "0.3.19"
bytes = "1"
clap = { version = "4.1.4", features = ["derive"] }
bincode = "1.3.3"
pcap = { git = "https://github.com/drblah/pcap", branch = "async_wrappable" }
lz4_flex = { version = "0.10.0" }
etherparse = "0.13.0"
async-trait = "0.1.63"
pnet_datalink = "0.33.0"
log = "0.4.0"
env_logger = "0.10.0"
#linux-info = { version = "0.1.13", features = ["network"] }
linux-info = { git = "https://github.com/drblah/linux-info", branch = "device", features = ["network"] }
anyhow = "1.0"
wpactrl = "0.5.1"
nix = { version = "0.26.2", features = ["default"] }